	  MODIFIED flag in open_files->flags is included only once.
	  (DLR)
  do_writeout()
	- Refactor so that no recursion is needed if we try to exit with
	  a modified file that has no name when TEMP_OPT is set. (DLR)
- nano.c:
  do_delete()
	- Tweak for efficiency. (David Benbennick)
  justify_format()
	- Remove redundant assignment. (DLR)
  do_exit()
	- Refactor so that no recursion is needed if we try to exit with
	  a modified file that has no name when TEMP_OPT is set. (DLR)
  print_numlock_warning()
	- Removed, as it's no longer needed and was never called
	  anywhere after the input overhaul. (DLR)
  do_verbatim_input()
	- Use size_t's instead of ints for the get_verbatim_kbinput()
	  call and the loop that ungetch()es its returned int*,
	  respectively. (DLR)
  main()
	- Don't open the first file in quiet mode, since if we do, an
	  error message won't be shown if it's unreadable. (DLR; found
	  by Jaap Eldering)
	- If we've specified multiple files on the command line and
	  multibuffer support is compiled in, turn multibuffer mode on
	  when reading those files and turn it off afterward if it was
	  off before.  This allows us to open multiple files without
	  having to turn multibuffer mode on at the command line or in
	  the nanorc first, both of which are unintuitive.  Multibuffer
	  mode should only affect how the "Read File" command behaves
	  anyway. (DLR)
- nano.h:
	- Since REGEXP_COMPILED is only used in search.c, convert it
	  from a flag to a static int there. (DLR)
- proto.h:
	- Remove unused xpt() and add_marked_sameline() prototypes.
	  (DLR)
- rcfile.c:
	- Move "rebinddelete" up in the list of options so that the list
	  is in alphabetical order. (DLR)
- search.c:
  regexp_init()
	- Overhaul for efficiency.  Also check if regcomp() failed, and
	  if so, display "Bad regex" message on the statusbar, so that
	  we don't have to display it separately after every call to
	  this function. (David Benbennick)
  search_init()